fix metadata box blurred

--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -44,6 +44,14 @@
     position: relative;
 }
 
+.userEnhancedGrid {
+    column-gap: 14px;
+    display: grid;
+    grid-template-columns: fit-content(20px) auto;
+    padding: 16px 28px;
+    position: relative;
+}
+
 .enhancedSocial {
     align-items: center;
     color: var(--color-gray-500) !important;
